--- a/RESUME 8/css.zip.css/resume8.html
+++ b/RESUME 8/css.zip.css/resume8.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-
+  
     <picture>
       <source media="(max-width:650px)" srcset="images/Face.jpg">
       <source media="(max-width:1000px)" srcset="images/Shoulders.jpg">
@@ -97,14 +97,14 @@
       </div>
 
     </main>
-
+    <div>
       <footer id="main-footer">
         <h2>Contact Details</h2>
           <a href="https://www.facebook.com/alapha.simanga" target="_blank"> <img class="icons" src="images/Facebook.png" alt="Facebook Icon"></a>
           <a href="https://mail.google.com/mail/u/0" target="_blank"> <img class="icons" src="images/Gmail.png" alt="Gmail Icon"></a>
           <a href="http://www.linkedin.com/in/alapha-simanga-1b6596165/" target="_blank"> <img class="icons" src="images/LinkedIn.png" alt="LinkedIn Icon"></a>
       </footer>
-    
+    </div>
     </body>
 
 </html>
